# MBTA

./: AWS_EC2_DEPLOYMENT.md  DASHBOARD_README.md  Dockerfile  PRODUCTION_README.md  PRODUCTION_SUMMARY.md  README.md  aws_setup.sh  config.env.example  demo_storage.py  deploy_production.sh  docker-compose.yml  init-db.sql  populate_sample_data.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  run_streamlit_dashboard.sh  start_dashboard.py  start_pipeline.py  streamlit_dashboard.py  test_gtfs_rt.py  test_storage_integration.py
.github/workflows/: update-dashboard.yml
docs/: index.html
docs/data/: latest_data.json  latest_stats.json
src/: __init__.py  alembic.ini  cli.py  main.py  standalone_demo.py  test_config.py  test_database.py
src/alembic/: env.py
src/alembic/versions/: fdf8d1c42329_initial_database_schema.py
src/mbta_pipeline/: __init__.py  cli.py
src/mbta_pipeline/config/: __init__.py  settings.py
src/mbta_pipeline/dashboard/: __init__.py  app.py
src/mbta_pipeline/dashboard/static/: dashboard.js  index.html
src/mbta_pipeline/ingestion/: __init__.py  base.py  gtfs_rt_ingestor.py  v3_rest_ingestor.py
src/mbta_pipeline/kafka/: __init__.py  consumer.py  producer.py
src/mbta_pipeline/models/: __init__.py  base.py  database.py  transit.py
src/mbta_pipeline/processing/: __init__.py  aggregator.py  analytics.py  analytics_queries.py  base.py  enricher.py  transformer.py  validator.py
src/mbta_pipeline/storage/: __init__.py  database.py  init_database.py  transit_storage.py
src/mbta_pipeline/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_aggregator.py
workflows/: update-dashboard.yml
